# rna-pk-fold

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: turner2004_min.yaml  xia1998_zucker_turner1999_min.yaml
src/rna_pk_fold/: __main__.py
src/rna_pk_fold/data/: turner2004_eddyrivas1999_min.yaml  turner2004_min.yaml  xia1998_zucker_turner1999_min.yaml
src/rna_pk_fold/energies/: __init__.py  energy_loader.py  energy_model.py  energy_ops.py  energy_pk_ops.py  energy_types.py  pk_energy_ops.py  types.py
src/rna_pk_fold/folding/: __init__.py  back_pointer.py  common_traceback.py  fold_state.py  recurrences.py  rivas_eddy_fill.py  rivas_eddy_matrices.py  traceback.py
src/rna_pk_fold/rules/: __init__.py  constraints.py  pairing.py
src/rna_pk_fold/scripts/: algorithm_performance.py  nndb_to_yaml_scraper.py  predict_rna.py
src/rna_pk_fold/structures/: __init__.py  gap_matrix.py  pairing.py  tri_matrix.py
src/rna_pk_fold/thermo/: __init__.py  energies.py  types.py
src/rna_pk_fold/utils/: __init__.py  back_pointer_access_utils.py  back_pointer_utils.py  energy_pk_utils.py  energy_utils.py  indices_utils.py  is2_utils.py  iter_utils.py  logging_config.py  logging_utils.py  matrix_utils.py  nucleotide_utils.py  table_lookup_utils.py  traceback_ops_utils.py
tests/: pytest.ini
tests/energies/: test_energy_loader.py  test_energy_ops.py  test_fill_matrix_v.py  test_types.py
tests/folding/: test_back_pointer.py  test_fill_matrices.py  test_fold_state.py  test_traceback.py
tests/integration/: test_compare_vienna_rna.py  test_zucker_compare_vienna_rna.py  test_zucker_eddy_rivas_compare_ipknot.py
tests/rules/: test_constraints.py  test_pairing.py
tests/structures/: test_tri_matrix.py
tests/thermo/: test_energy_loader.py  test_types.py
tests/unit/energies/: test_energy_loader.py  test_energy_ops.py  test_energy_pk_ops.py  test_types.py
tests/unit/folding/: test_fill_matrices.py  test_fold_state.py  test_re_scaffold.py
tests/unit/rules/: test_constraints.py
tests/unit/structures/: test_gap_matrix.py  test_pairing.py  test_tri_matrix.py
tests/unit/utils/: tensor_utils.py  test_back_pointer_utils.py  test_energy_pk_utils.py  test_energy_utils.py  (+7 more)
tests/utils/: test_nucleotide_utils.py
(+56 files in other folders)
